[build-system]
requires      = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapzebview"
version = "0.1.0"
description = "mapzebview - Graphical UI to the MapZeBrain atlas"
readme = "README.md"
authors = [{ name = 'Tim Hladnik', email = "contact@vxpy.org" }]
license = { file = 'LICENSE' }
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering'
]
keywords = ['neuroscience','anatomy', 'experiment', 'data analysis']
dependencies = [
    'colorcet',
    'numpy',
    'tifffile',
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ['.']
include = ['mapzebview*']

[project.optional-dependencies]
dev = ['pip-tools', 'pytest', 'build', 'twine']

[project.urls]
Homepage = 'https://github.com/thladnik/mapzebrain-viewer'
