[build-system]
requires      = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapzebview"
version = "0.2.0"
description = "mapzebview - Graphical user interface to the MapZeBrain atlas"
readme = "README.md"
authors = [{ name = 'Tim Hladnik', email = "contact@vxpy.org" }]
license = { file = 'LICENSE' }
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering'
]
keywords = ['neuroscience','anatomy', 'experiment', 'data analysis']
dependencies = [
    'colorcet',
    'h5py',
    'numpy',
    'numpy-stl',
    'pandas',
    'pyopengl',
    'pyqtgraph',
    'PySide6',
    'tables',
    'tifffile',
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ['.']
include = ['mapzebview*']

[project.optional-dependencies]
pretty = ['matplotlib']
dev = ['pip-tools', 'pytest', 'build', 'twine']

[project.urls]
Homepage = 'https://github.com/thladnik/mapzebrain-viewer'

[project.scripts]
mapzebview = 'mapzebview.main:run'
